--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "fremail/lumen-nested-route-groups",
   "type": "library",
+  "version": "1.0.0-beta",
   "description": "Extends a lumen application for using nested route groups",
   "keywords": ["lumen", "route", "group"],
   "license": "MIT",
@@ -25,5 +26,5 @@
   "config":{
     "preferred-install": "dist"
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "beta"
 }
