--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name": "fremail/lumen-nested-route-groups",
   "type": "library",
-  "version": "1.0.2-beta",
-  "description": "Extends a lumen application for using nested route groups",
-  "keywords": ["lumen", "route", "group"],
+  "version": "1.1.0",
+  "description": "Extends a lumen application for using nested route groups. In addition to the groups it's possible to use any() and match() methods.",
+  "keywords": ["lumen", "route", "group", "any", "match"],
   "license": "MIT",
   "authors": [
     {
@@ -13,10 +13,7 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "laravel/lumen-framework": "~5.0"
-  },
-  "require-dev": {
-    "laravel/lumen":"~5.0"
+    "laravel/lumen-framework": "5.*"
   },
   "autoload": {
     "psr-4": {
@@ -25,6 +22,5 @@
   },
   "config":{
     "preferred-install": "dist"
-  },
-  "minimum-stability": "beta"
+  }
 }
